--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- <button @click="test">test</button> -->
             <h3>{{ $t("jung_dec") }}</h3>
             <button type="button" :class="eclass" @click="estart">{{ $t("ennegram_test") }}</button>
-            <button @click="etest">etest</button>
+            <!-- <button @click="etest">etest</button> -->
             <h3>{{ $t("read_pls") }}</h3>
             <h4 class="start_dec">{{ $t("start_dec_text") }}</h4>
         </div>
