--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>{{ $t("Language_selection") }}</p>
                 <select name="Language" class="Language" v-model="$i18n.locale">
                     <option value="zh">简体中文/Simplifed Chinese</option>
-                    <option value="hk">繁体中文(未完工)/Traditional Chinese</option>
+                    <option value="hk">繁体中文/Traditional Chinese</option>
                   </select>
             </div><br><br>
             <button type="button" :class="bclass" @mouseover="transbutton" @mouseleave="outbutton" @click="start">{{ $t("jung_test") }}</button>
