--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div><br><br>
             <button type="button" :class="bclass" @mouseover="transbutton" @mouseleave="outbutton" @click="start">{{ $t("jung_test") }}</button>
             <!-- <button @click="test">test</button> -->
-            <h3>{{ $t("jung_dec") }}</h3>
+            <h3 class="start_dec">{{ $t("jung_dec") }}</h3>
             <button type="button" :class="eclass" @click="estart">{{ $t("ennegram_test") }}</button>
             <!-- <button @click="etest">etest</button> -->
             <h3>{{ $t("read_pls") }}</h3>
