--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                             v-model="$i18n.locale">
                             <option value="zh">简体中文/Simplifed Chinese</option>
                             <option value="hk">繁体中文/Traditional Chinese</option>
+                            <option value="ja">日本語/Japanese</option>
                         </select>
                     </ul>
                     <div class="nav-item col-md-2 right">
@@ -74,6 +75,7 @@
                 class="form-select Language justify-content-center align-items-center d-md-none" v-model="$i18n.locale">
                 <option value="zh">简体中文/Simplifed Chinese</option>
                 <option value="hk">繁体中文/Traditional Chinese</option>
+                <option value="ja">日本語/Japanese</option>
             </select>
             <form class="row row-cols-1 row-cols-md-2">
                 <div class="col">
