--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                             <option value="zh">简体中文/Simplifed Chinese</option>
                             <option value="hk">繁体中文/Traditional Chinese</option>
                             <option value="ja">日本語/Japanese</option>
+                            <option value="en">English</option>
                         </select>
                     </ul>
                     <div class="nav-item col-md-2 right">
