--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/vue-i18n@9"></script>
     <script src="mainscript.js"></script>
     <script src="cn_text.js"></script>
@@ -48,7 +48,7 @@
                         </select>
                     </ul>
                     <div class="nav-item col-md-2 right">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">V.2023.8.21.0</a>
+                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">V.2024.1.08.0</a>
                     </div>
                     <div class="nav-item col-md-1 right">
                         <a href="https://github.com/LastEncore0/personalitytest" target="_blank"
