--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 
-<head>
+<head v-cloak >
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
@@ -48,7 +48,7 @@
                         </select>
                     </ul>
                     <div class="nav-item col-md-2 right">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">V.2024.1.08.0</a>
+                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">V.2024.1.20.0</a>
                     </div>
                     <div class="nav-item col-md-1 right">
                         <a href="https://github.com/LastEncore0/personalitytest" target="_blank"
