--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 
-<head v-cloak >
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
@@ -23,7 +23,7 @@
     <script src="jq.js"></script>
     <script src="jquerytest.js"></script>
 
-    <div id="app">
+    <div id="app" v-cloak>
         <nav class="navbar navbar-expand-lg navbar-light bg-light bg-gradient mb-4">
             <div class="container-fluid">
                 <a class="navbar-brand me-md-5 px-2" href="index.html">{{ $t("test_title") }}</a>
@@ -48,7 +48,7 @@
                         </select>
                     </ul>
                     <div class="nav-item col-md-2 right">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">V.2024.1.20.0</a>
+                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">V.2024.1.20.1</a>
                     </div>
                     <div class="nav-item col-md-1 right">
                         <a href="https://github.com/LastEncore0/personalitytest" target="_blank"
