--- a/index.html
+++ b/index.html
@@ -562,6 +562,10 @@
 
     </div>
 
+    
+    <script async="async" data-cfasync="false" src="//pl25540658.profitablecpmrate.com/94a5b5a93390be54ec045b85df632af5/invoke.js"></script>
+    <div id="container-94a5b5a93390be54ec045b85df632af5"></div>
+
     <script type="module" src="vuescript.js"></script>
     <script type="module" src="vuei18n.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
