--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <title>人格测试</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5445751535150411"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="theme.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5445751535150411"
+     crossorigin="anonymous"></script>
 
 </head>
 
