--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
     </div>
 
     <!-- 廣告 -->
-    <script async="async" data-cfasync="false" src="//pl25540658.profitablecpmrate.com/94a5b5a93390be54ec045b85df632af5/invoke.js"></script>
-    <div id="container-94a5b5a93390be54ec045b85df632af5"></div>
+    <!-- <script async="async" data-cfasync="false" src="//pl25540658.profitablecpmrate.com/94a5b5a93390be54ec045b85df632af5/invoke.js"></script>
+    <div id="container-94a5b5a93390be54ec045b85df632af5"></div> -->
 
     <script type="module" src="vuescript.js"></script>
     <script type="module" src="vuei18n.js"></script>
